+ Begun work on ServerStatusTask with focus on reading windows update status + Applied a Monitor lock on the task timer trigger to prevent having the same task running multiple times in parallell if the execution time exceeds the interval time + Connection cookie now expires after 1 year + Upgraded solution to VS2015 + Cleaned up solution file + Upgraded all projects to .NET 4.6 + Reinstalled all nuget-packages to retarget them to .NET 4.6 + Refactored some code here and there to use new C#6 syntax

--- a/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
+++ b/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="performance-task-template template">
-    <div class="col-lg-4 chart-container">
+    <div class="col-lg-6 chart-container">
         <div class="clearfix">
             <h5 class="chart-title">Performance</h5>
             <ul class="chart-legend">
@@ -8,6 +8,6 @@
                 <li class="performance-legend-disk"><span class="legend-item-bullet"></span><span class="legend-item-text">Disk</span></li>
             </ul>
         </div>
-        <div class="chart-target ct-double-octave"></div>
+        <div class="chart-target ct-octave"></div>
     </div>
 </div>
