+ Replaced Lazy Instance with DI via SImpleInjector + Merged TypeScript output to single file

--- a/Scoop.Web/Views/Shared/_Layout.cshtml
+++ b/Scoop.Web/Views/Shared/_Layout.cshtml
@@ -31,11 +31,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/chartist/chartist.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/select2/select2.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/site/ConnectionService.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/site/PerformanceTask.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/site/AutoUpdateTask.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/site/ConnectionViewModel.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/site/Site.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/site/script.js")"></script>
     @*<script type="text/javascript">
         $(function () {
             updateCurrentConnections(@Html.Raw(Model.ConnectionStorageJson));
