--- a/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
+++ b/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="performance-task-template template">
     <div class="col-lg-6 chart-container">
         <div class="clearfix">
-            <h5 class="chart-title">Performance</h5>
+            <h5 class="chart-title">Performance <span class="name"></span> <small class="uri"></small></h5>
             <ul class="chart-legend">
                 <li class="performance-legend-cpu"><span class="legend-item-bullet"></span><span class="legend-item-text">CPU</span></li>
                 <li class="performance-legend-mem"><span class="legend-item-bullet"></span><span class="legend-item-text">Mem</span></li>
