--- a/Scoop.Web/Views/Shared/_Layout.cshtml
+++ b/Scoop.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/chartist/chartist.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/select2/select2.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/js-cookie/js.cookie-2.0.3.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/site/script.js")"></script>
     @*<script type="text/javascript">
         $(function () {
