--- a/Scoop.Web/Views/Shared/_ConnectionModal.cshtml
+++ b/Scoop.Web/Views/Shared/_ConnectionModal.cshtml
@@ -14,26 +14,34 @@
 
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="connectModalTabMyServers">
-                        <ul class="connect-server-list fa fa-ul" data-bind="foreach: connections">
-                            <li class="connect">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <h5>
-                                            <i class="fa-li fa fa-toggle-on connected-icon" data-bind="visible: isConnected, click: $root.disconnect"></i>
-                                            <i class="fa-li fa fa-toggle-off disconnected-icon" data-bind="visible: !isConnected(), click: $root.connect"></i>
-                                            <span class="connect-name" data-bind="text: name"></span>
-                                        </h5>
+                        <div class="connect-server-list" data-bind="foreach: connections">
+                            <div class="connect row">
+                                <div class="col-xs-5">
+                                    <div class="ellipsis">
+                                        <i class="fa fa-fw fa-arrow-circle-o-up auto-connect-on-icon" data-bind="visible: autoConnect, click: $root.disableAutoConnect"></i>
+                                        <i class="fa fa-fw fa-circle-o auto-connect-off-icon" data-bind="visible: !autoConnect(), click: $root.enableAutoConnect"></i>
+                                        <i class="fa fa-fw fa-toggle-on connected-icon" data-bind="visible: isConnected, click: $root.disconnect"></i>
+                                        <i class="fa fa-fw fa-toggle-off disconnected-icon" data-bind="visible: !isConnected(), click: $root.connect"></i>
+                                        <span class="connect-name" data-bind="text: name"></span>
                                     </div>
-                                    <div class="col-xs-9">
-                                        <small class="connect-uri" data-bind="text: uri"></small>
-                                    </div>
-                                    @*<div class="col-xs-3">
-                                        <button class="btn btn-xs btn-success connect-button" data-bind="visible: !isConnected(), click: $root.connect"><i class="fa fa-toggle-on"></i>Connect</button>
-                                        <button class="btn btn-xs btn-danger disconnect-button" data-bind="visible: isConnected, click: $root.disconnect"><i class="fa fa-toggle-"></i>Disconnect</button>
-                                    </div>*@
                                 </div>
-                            </li>
-                        </ul>
+                                <div class="col-xs-6">
+                                    <div class="ellipsis">
+                                        <code class="connect-uri">
+                                            <span class="text-warning" data-bind="if: hasConnectionProblem"><i class="fa fa-fw fa-warning"></i></span>
+                                            <span class="text-success" data-bind="if: !hasConnectionProblem()"><i class="fa fa-fw fa-check"></i></span>
+                                            <span class="text-dark" data-bind="text: uri"></span>
+                                        </code>
+                                    </div>
+                                    <div data-bind="if: hasConnectionProblem">
+                                        <small><em class="text-warning" data-bind="text: connectionProblemMessage"></em></small>
+                                    </div>
+                                </div>
+                                <div class="col-xs-1 text-right">
+                                    <i class="fa fa-times remove-connection-icon" data-bind="click: $root.removeConnection"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="connectModalTabAddNewServer">
                         <div class="row">
